--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -12,6 +12,16 @@ spring:
     username: root
     password: 1234
 
+
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.atguigu.springcloud.entities
+
+eureka:
+  client:
+    # 是否将自己注册进Eureka Server默认为true
+    register-with-eureka: true
+    # 表示是否从Eureka Server抓取已注册信息，默认为true。单节点无所谓，集群必须设置为true。
+    fetch-registry: true
+    service-url:
+      defaultZone: http://eureka7002.com:7002/eureka,http://eureka7001.com:7001/eureka
