--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka7001.com
   client:
     # false 表示不向注册中心注册自己
     register-with-eureka: false
@@ -11,4 +11,4 @@ eureka:
     fetch-registry: false
     # 设置与eureka server 交互的地址，查询服务和注册服务都需要这个地址
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://eureka7002.com:7002/eureka
