--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
       <module>cloud-consumer-order80</module>
       <module>cloud-api-common</module>
       <module>cloud-eureka-server7001</module>
+        <module>cloud-eureka-server7002</module>
+      <module>cloud-provider-payment8002</module>
     </modules>
     <!-- 继承关系什么的 -->
   <!-- 表示是一个pom总的付工程 -->
